# maflow

./: .cursorrules  .gitignore  GUIDE.md  LICENSE  README.md  SYSTEM-PROMPT.md  orchestrator.py  pyproject.toml
.continue/: config.yaml
auditor/: alerts.py  cli.py  database.py  models.py  parser.py  report.py  tracker.py  writer.py
templates/: ARCHITECTURE.md  CLAUDE.md  SPEC.md  agent-log.md  decisions.md
